styles.css
/* ... */
.event-timeline-triangle {
    position: absolute;
    width: 0;
    height: 0;
    left: 27px;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-bottom: 10px solid #70757D;
    z-index: 1;
}

.event-tamper-icon {
    filter: brightness(0) saturate(100%) invert(31%) sepia(88%) saturate(2813%) hue-rotate(343deg) brightness(93%) contrast(90%);
}

.log-icon-img[src*="tamperdetectedicon"] {
    position: relative;
    top: -2px;
}

/* ===== POPUP MODAL FOR SENSOR DETAIL ===== */

.popup-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 375px;
    height: 812px;
    z-index: 1000;
}

.popup-overlay.hidden {
    display: none;
}

.popup-darkener {
    position: absolute;
    width: 375px;
    height: 812px;
    left: 0;
    top: 0;
    background: rgba(26, 26, 26, 0.3);
    cursor: pointer;
}

.popup-card {
    position: absolute;
    width: 343px;
    height: 589px;
    left: 16px;
    top: 140px;
    background: #4C5158;
    border-radius: 4px;
    z-index: 1001;
}

.popup-sensor-label {
    position: absolute;
    width: 71px;
    height: 15px;
    left: calc(50% - 71px/2 + 16px);
    top: 39px;
    font-family: 'Test Söhne';
    font-weight: 400;
    font-size: 11px;
    line-height: 140%;
    color: #FFFFFF;
    margin: 0;
    display: flex;
    align-items: center;
    text-align: right;
}

.popup-sensor-id {
    position: absolute;
    width: 89px;
    height: 24px;
    left: calc(50% - 89px/2);
    top: 54px;
    font-family: 'Test Söhne';
    font-weight: 500;
    font-size: 17px;
    line-height: 140%;
    text-align: center;
    color: #FFFFFF;
    margin: 0;
}

.popup-title-divider {
    position: absolute;
    width: 311px;
    height: 2px;
    left: 16px;
    top: 86px;
    background: #FFFFFF;
}

.popup-timeline-line {
    position: absolute;
    width: 2px;
    height: 501px;
    left: 31px;
    top: 88px;
    background: #70757D;
}

.popup-event-icon {
    position: absolute;
    width: 32px;
    height: 32px;
    left: 16px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 3;
}

.popup-icon-img {
    width: 24px;
    height: 24px;
    display: block;
    margin: auto;
}

.popup-icon-img.event-tamper-icon {
    position: relative;
    top: -2px;
}

.popup-icon-dark {
    filter: brightness(0) saturate(100%) invert(31%) sepia(7%) saturate(851%) hue-rotate(169deg) brightness(94%) contrast(88%);
}

.popup-event-divider {
    position: absolute;
    width: 290px;
    height: 2px;
    left: 37px;
    z-index: 2;
}

.popup-event-name {
    position: absolute;
    width: 238px;
    height: 24px;
    left: 64px;
    font-family: 'Test Söhne';
    font-weight: 400;
    font-size: 17px;
    line-height: 140%;
    color: #FFFFFF;
    margin: 0;
    display: flex;
    align-items: center;
}

.popup-event-time {
    position: absolute;
    width: 95px;
    height: 15px;
    left: 64px;
    font-family: 'Test Söhne';
    font-weight: 400;
    font-size: 11px;
    line-height: 140%;
    color: #FFFFFF;
    margin: 0;
    display: flex;
    align-items: center;
}

.popup-timeline-triangle {
    position: absolute;
    width: 0;
    height: 0;
    left: 27px;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-bottom: 10px solid #70757D;
    z-index: 1;
}

